force-app/main/default/objects/Jira_Connector_Profile__c/Jira_Connector_Profile__c.object-meta.xml
<CustomObject>
    <description>Runtime-editable Jira connector profile for a project and issue type mapping workspace.</description>
    <label>Jira Connector Profile</label>
    <nameField>
        <label>Connector Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Connector Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>