force-app/main/default/objects/Jira_Connector_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this profile is available in the mapping workspace.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>