force-app/main/default/objects/Jira_Connector_Profile__c/fields/Browse_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Browse_Base_Url__c</fullName>
    <description>Optional Jira browse base URL used when rendering issue links.</description>
    <label>Browse Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>