force-app/main/default/objects/Jira_Connector_Profile__c/fields/Connector_Key__c.field-meta.xml
<CustomField>
    <fullName>Connector_Key__c</fullName>
    <description>Stable key used to scope synced Jira fields and Agentforce mappings for this profile.</description>
    <externalId>true</externalId>
    <label>Connector Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>