force-app/main/default/objects/Jira_Connector_Profile__c/fields/Employee_Default__c.field-meta.xml
<CustomField>
    <fullName>Employee_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select exactly one active profile for employee-facing Jira actions.</description>
    <label>Employee Default</label>
    <type>Checkbox</type>
</CustomField>