force-app/main/default/objects/Jira_Connector_Profile__c/fields/Is_Active_For_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_For_Agentforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether Agentforce runtime actions may use this connector profile.</description>
    <label>Active For Agentforce</label>
    <type>Checkbox</type>
</CustomField>