force-app/main/default/objects/Jira_Connector_Profile__c/fields/Issue_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Id__c</fullName>
    <description>Jira issue type id used for create metadata and issue routing.</description>
    <label>Issue Type ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>