force-app/main/default/objects/Jira_Connector_Profile__c/fields/Issue_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type_Name__c</fullName>
    <description>Jira issue type name used for admin display.</description>
    <label>Issue Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>