force-app/main/default/objects/Jira_Connector_Profile__c/fields/Named_Credential_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Api_Name__c</fullName>
    <description>Named Credential API name used for Jira REST callouts.</description>
    <label>Named Credential API Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>