force-app/main/default/objects/Jira_Connector_Profile__c/fields/Open_Issue_Jql_Clause__c.field-meta.xml
<CustomField>
    <fullName>Open_Issue_Jql_Clause__c</fullName>
    <description>Optional JQL fragment used to scope open issue searches for this profile.</description>
    <label>Open Issue JQL Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>