force-app/main/default/objects/Jira_Connector_Profile__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>Jira project id used for create metadata and issue routing.</description>
    <label>Project ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>