force-app/main/default/objects/Jira_Connector_Profile__c/fields/Project_Key__c.field-meta.xml
<CustomField>
    <fullName>Project_Key__c</fullName>
    <description>Jira project key used for display and JQL scoping.</description>
    <label>Project Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>