force-app/main/default/objects/Jira_Connector_Profile__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Jira project name used for admin display.</description>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>