force-app/main/default/objects/Jira_Connector_Profile__c/fields/Route_Key__c.field-meta.xml
<CustomField>
    <fullName>Route_Key__c</fullName>
    <description>Optional Agentforce or automation route key, such as software, security, incident, or change.</description>
    <label>Route Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>