force-app/main/default/objects/Jira_Connector_Profile__c/fields/Salesforce_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Api_Name__c</fullName>
    <description>Salesforce object API name connected to this Jira project and issue type.</description>
    <label>Salesforce Object API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>