force-app/main/default/objects/Jira_Connector_Profile__c/fields/Salesforce_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Label__c</fullName>
    <description>Salesforce object label connected to this Jira project and issue type.</description>
    <label>Salesforce Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>