force-app/main/default/objects/Jira_Connector_Profile__c/fields/Shared_Reporter_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Shared_Reporter_Account_Id__c</fullName>
    <description>Optional Jira customer accountId used as the reporter for employee-created issues. Leave blank to use the Named Credential principal.</description>
    <label>Shared Reporter Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>