force-app/main/default/objects/Jira_Connector_Profile__c/fields/Shared_Reporter_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Shared_Reporter_Display_Name__c</fullName>
    <description>Optional friendly name for the shared Jira customer reporter.</description>
    <label>Shared Reporter Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>